# flask-rest-api-example

./: README.md  pyproject.toml
app/: app.py
app/config/: __init__.py
app/modules/auth/: __init__.py  parameters.py  resources.py  schemas.py
app/modules/users/: __init__.py  resources.py
