[tool.poetry]
name = "flask-rest-api-example"
version = "0.1.0"
description = ""
authors = ["ssfdust <ssfdust@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
sqlalchemy = "^1.3"
flask-admin = "^1.5"
flask-cors = "^3.0"
flask-excel = "^0.0.7"
marshmallow-sqlalchemy = "^0.16.1"
marshmallow = "=v3.0.0rc5"
# flask-rest-api = "^0.14.0"
flask-rest-api = { git = 'https://github.com/ssfdust/flask-rest-api.git', branch = 'blp_from_api_v1'}
flask-jwt-extended = "^3.18"
flask-sqlalchemy = "^2.3"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.0"
pytest = "^4.4"
flask-shell-ipython = "^0.4.0"
neovim = "^0.3.1"
jedi = "^0.13.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
